--- a/src/main/resources/templates/admin/restaurant/new.html
+++ b/src/main/resources/templates/admin/restaurant/new.html
@@ -33,7 +33,7 @@
         <p>
             <label>電話番号(ハイフンあり)</label>
             <div class="text-danger" th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}"></div>
-            <input type="tel" pattern="[0-9]{2,4}-[0-9]{3,4}-[0-9]{4}" th:field="*{telephone}">
+            <input type="tel" th:field="*{telephone}">
         </p>
         <p>
             <label>住所</label>
@@ -97,16 +97,16 @@
         <p>
             <label>定休日</label>
             <span class="text-danger" th:text="${errorMessage}"></span>
-            <input type="checkbox" name="regularHoliday" value="1">月曜日
-            <input type="checkbox" name="regularHoliday" value="2">火曜日
-            <input type="checkbox" name="regularHoliday" value="3">水曜日
-            <input type="checkbox" name="regularHoliday" value="4">木曜日
-            <input type="checkbox" name="regularHoliday" value="5">金曜日
-            <input type="checkbox" name="regularHoliday" value="6">土曜日
-            <input type="checkbox" name="regularHoliday" value="7">日曜日
+            <input type="checkbox" name="regularHoliday" value="1" th:checked="${dayOfWeeks.contains(1)}">月曜日
+            <input type="checkbox" name="regularHoliday" value="2" th:checked="${dayOfWeeks.contains(2)}">火曜日
+            <input type="checkbox" name="regularHoliday" value="3" th:checked="${dayOfWeeks.contains(3)}">水曜日
+            <input type="checkbox" name="regularHoliday" value="4" th:checked="${dayOfWeeks.contains(4)}">木曜日
+            <input type="checkbox" name="regularHoliday" value="5" th:checked="${dayOfWeeks.contains(5)}">金曜日
+            <input type="checkbox" name="regularHoliday" value="6" th:checked="${dayOfWeeks.contains(6)}">土曜日
+            <input type="checkbox" name="regularHoliday" value="7" th:checked="${dayOfWeeks.contains(7)}">日曜日
         </p>
         <p>
-            <input type="submit" value="登録確定">
+            <input type="submit" value="登録">
         </p>
         <a th:href="@{/admin/restaurant-list}">戻る</a>
     </form>
