--- a/src/main/resources/templates/reservation/new.html
+++ b/src/main/resources/templates/reservation/new.html
@@ -42,7 +42,7 @@
                     </div>
 
 
-                    <form method="post" th:action="@{/reservation/add/{id}(id = ${restaurantId})}" th:object="${formModel}">
+                    <form method="post" th:action="@{/reservation/add/{id}(id = ${restaurantId})}" th:object="${formModel}" novalidate>
                         <!-- CSRFトークン -->
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
@@ -68,7 +68,7 @@
                         <input class="form-control" id="headcount" type="number" min="1" th:max="${restaurant.capacity}" th:field="*{headcount}">
                         </div>
                         <p>
-                            <button type="submit" class="btn btn-primary">登録確定</button>
+                            <button type="submit" class="btn btn-primary">予約確定</button>
                         </p>
                     </form>
                     <a th:href="@{/restaurant/{id}(id=${restaurant.id})}">戻る</a>
