予約変更画面調整

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
             <div class="mb-3">
                 <label for="password" class="form-label fw-bold">パスワード</label>
                 <input type="password" class="form-control" id="password" name="password"
-                       placeholder="6〜20桁の半角英数">
+                       placeholder="6〜20桁の半角数字">
             </div>
 
             <div class="form-check mb-3">
