--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,6 +44,11 @@ body {
 }
 
 /* サイト管理者画面 */
+.admin-main {
+     margin-left: 230px;
+     padding: 20px;
+}
+
 .admin-sidebar {
      height: 100vh;
      width: 230px;
@@ -60,4 +65,8 @@ body {
     background-color: #2c3e50;
     color: #fff;
     border: none;
+}
+
+.card {
+    margin-bottom: 30px;
 }
