--- a/src/main/resources/templates/reservation/new.html
+++ b/src/main/resources/templates/reservation/new.html
@@ -18,60 +18,60 @@
 
     </header>
     <main>
-        <div class="container pt-4 pb-5 nya-container">
+        <div class="container pt-4 pb-4 shadow-sm w-50 bg-white vh-630 nya-container">
             <div class="row justify-content-center">
-                <div class="col-xxl-9 col-xl-10 col-lg-11">
+                <div class="col-xxl-7 col-xl-8 col-lg-9">
                     <h2 class="mb-4 text-center" th:text="${restaurant.name + ' の予約'}"></h2>
-                    <div>
-                        <span th:text="${'営業時間(L.Oは営業終了30分前)：' + restaurant.startBusiness + '~' + restaurant.endBusiness}"></span>
-                        <span th:text="${'定員：' + restaurant.capacity + '席'}"></span>
-                        <span>
-                             定休日：
-                            <span th:each="regularHoliday : ${regularHolidays}">
-                            <th:block th:switch="${regularHoliday.regularHoliday}">
-                                <span th:case=1 th:text="月曜日"></span>
-                                <span th:case=2 th:text="火曜日"></span>
-                                <span th:case=3 th:text="水曜日"></span>
-                                <span th:case=4 th:text="木曜日"></span>
-                                <span th:case=5 th:text="金曜日"></span>
-                                <span th:case=6 th:text="土曜日"></span>
-                                <span th:case=7 th:text="日曜日"></span>
-                            </th:block>
-                         </span>
-                        </span>
+                    <div class="restaurant-info">
+                        <div th:text="${'営業時間(L.Oは営業終了30分前)：' + restaurant.startBusiness + '~' + restaurant.endBusiness}"></div>
+                        <div th:text="${'定員：' + restaurant.capacity + '席'}"></div>
+                        <div>
+                             定休日：<span th:each="regularHoliday : ${regularHolidays}">
+                                        <th:block th:switch="${regularHoliday.regularHoliday}">
+                                            <span th:case=1 th:text="月曜日"></span>
+                                            <span th:case=2 th:text="火曜日"></span>
+                                            <span th:case=3 th:text="水曜日"></span>
+                                            <span th:case=4 th:text="木曜日"></span>
+                                            <span th:case=5 th:text="金曜日"></span>
+                                            <span th:case=6 th:text="土曜日"></span>
+                                            <span th:case=7 th:text="日曜日"></span>
+                                        </th:block>
+                                    </span>
+                        </div>
+                        <hr/>
                     </div>
-
 
                     <form method="post" th:action="@{/reservation/add/{id}(id = ${restaurantId})}" th:object="${formModel}" novalidate>
                         <!-- CSRFトークン -->
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
                         <!-- 入力フォーム -->
-                        <div class="form-group row mb-3">
-                            <label class="form-label" for="date">予約日</label>
+                        <div class="form-group row mb-3 justify-content-center text-center">
+                            <label class="form-label" for="date">✅予約日</label>
                             <div class="text-danger" th:if="${#fields.hasErrors('reservationDate')}" th:errors="*{reservationDate}"></div>
-                            <input type="date" class="form-control" id="date" th:field="*{reservationDate}">
+                            <input type="date" class="form-control w-auto" id="date" th:field="*{reservationDate}">
+                            <span class="help-block text-secondary">予約は2か月先まで可</span>
                         </div>
-                        <div class="form-group row mb-3">
-                            <label class="form-label" for="timeSelect">予約時間（営業終了1時間前まで予約可）</label>
+                        <div class="form-group row mb-3 justify-content-center text-center">
+                            <label class="form-label" for="timeSelect">✅予約時間</label>
                         <div class="text-danger" th:if="${#fields.hasErrors('reservationTime')}" th:errors="*{reservationTime}"></div>
-                        <select class="form-select"
+                        <select class="form-select w-auto"
                                 id="timeSelect"
                                 th:field="*{reservationTime}"
                                 th:attr="data-start=${restaurant.startBusiness}, data-end=${restaurant.endBusiness}">
                         </select>
                         <input type="hidden" id="currentTime" th:value="*{reservationTime}">
+                        <span class="help-block text-secondary">営業終了1時間前まで予約可</span>
                         </div>
-                        <div class="form-group row mb-3">
-                            <label class="form-label" for="headcount">予約人数</label>
+                        <div class="form-group row mb-5 justify-content-center text-center">
+                            <label class="form-label" for="headcount">✅予約人数</label>
                         <div class="text-danger" th:if="${#fields.hasErrors('headcount')}" th:errors="*{headcount}"></div>
-                        <input class="form-control" id="headcount" type="number" min="1" th:max="${restaurant.capacity}" th:field="*{headcount}">
+                        <input class="form-control w-auto" id="headcount" type="number" min="1" th:max="${restaurant.capacity}" th:field="*{headcount}">
                         </div>
-                        <p>
-                            <button type="submit" class="btn btn-primary">予約確定</button>
+                        <p class="text-center mt-2">
+                            <button type="submit" class="btn btn-warning text-white">予約確定</button>
                         </p>
                     </form>
-                    <a th:href="@{/restaurant/{id}(id=${restaurant.id})}">戻る</a>
                 </div>
             </div>
         </div>
