--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -51,7 +51,7 @@
         </ul>
     </div>
 
-    <a th:href="@{/history}" class="text-decoration-none text-white mt-3 d-block">📜 過去の予約履歴</a>
+    <a th:href="@{/history}" class="btn-sidebar mt-3 d-block text-center">📜 過去の予約履歴</a>
 </div>
 
 <!-- 右側メインエリア -->
